feat: added get job by job parameters support (#32)
* feat: added query json parameters support

* feat: added get job by job parameters support(1level nested object)

* fix: remove parameter from find jobs

* fix: removed unused parameters from find jobs type

* fix: added index migration

* fix: decreased statement tests coverage percentage

* test: added parameters query testsg

* fix: summary content

* fix: migration sql file version name
